--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ body{
 .clock{
     width: 500px;
     height: 500px;
+    width: 25rem;
+    height: 25rem;
     border-radius: 50%;
     border: 5px solid rgba(255, 255, 255, 0.747);
     position: relative;
@@ -77,4 +79,17 @@ body{
     background-color: black;
     border-radius: 50%;
     z-index: 3;
+}
+
+@media (max-width: 480px) {
+    body{
+        overflow: scroll;
+    }
+    .clock{
+        width: 17rem;
+        height: 17rem;
+    }
+    .number{
+        font-size: 1.5rem;
+    }
 }
