--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,8 @@ body{
     left: 50%;
     width: 50px;
     height: 50px;
+    width: 2.5rem;
+    height: 2.5rem;
     transform: translate(-50%, 50%);
     background-color: black;
     border-radius: 50%;
